@@ -7,6 +7,7 @@
 * FS#459 - duplicate python code generated on toolbar add widget.
 + Any widget (wxWindow) can be added also to ToolBarForm (stand-alone toolbar class).
 * Fixed disconnection of menu items' event handlers.
+* Fixed positioning of newly created items in object tree.
 
 02/10/2010 Version 3.01.67 (Beta)
 * Fixed resolving of name conflicts in stand-alone toolbars and menubars.
